--- a/iOS/Dust/Dust/Base.lproj/Main.storyboard
+++ b/iOS/Dust/Dust/Base.lproj/Main.storyboard
@@ -1,8 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="4C8-cy-XMI">
+    <device id="retina5_9" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <scenes/>
+    <scenes>
+        <!--예보-->
+        <scene sceneID="Az8-EP-z3a">
+            <objects>
+                <viewController id="72u-RB-tfF" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="QGr-6G-XOn">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="Dfe-Nx-BaN"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="예보" image="clock.fill" id="ZmY-aV-Jn4"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xR9-n2-MIC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-24" y="112"/>
+        </scene>
+        <!--미세먼지-->
+        <scene sceneID="mha-4N-S49">
+            <objects>
+                <viewController id="Vre-7T-qEx" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="LEb-Dm-jEg">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <viewLayoutGuide key="safeArea" id="iua-0J-9fc"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="미세먼지" image="smoke.fill" id="Eaj-8C-db1"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="5jU-1d-tkr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-24" y="-536"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="b0K-kE-Pvr">
+            <objects>
+                <tabBarController id="4C8-cy-XMI" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7vn-We-RuV">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="Vre-7T-qEx" kind="relationship" relationship="viewControllers" id="mJr-Oo-ogN"/>
+                        <segue destination="72u-RB-tfF" kind="relationship" relationship="viewControllers" id="Y0j-MS-j0x"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lbT-kc-2nR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-943" y="-212"/>
+        </scene>
+    </scenes>
+    <resources>
+        <image name="clock.fill" width="17" height="17"/>
+        <image name="smoke.fill" width="19" height="14"/>
+    </resources>
 </document>
