--- a/FE/src/style/navigation.css
+++ b/FE/src/style/navigation.css
@@ -1,7 +1,31 @@
 .navigation{
-  width: 100%;
+  width: 414px;
   height: 70px;
-  background-color: black;
+  margin: 0 auto;
+}
+
+.navigation > .buttonArea{
+  width: 414px;
+  padding-top: 10px;
+  margin: 0 auto;
+}
+
+.navigation > .buttonArea > button{
+  width: 207px;
+  height: 60px;
+  float: left;
+  text-align: center;
+  font-size: 30px;
+  background-color: lightgray;
+  border-top-left-radius: 25px;
+  border-top-right-radius: 25px;
+  border: 1px solid white;
+  transition: background-color 0.2s;
+}
+
+.navigation > .buttonArea > button:active{
+  background-color: grey;
+  transition: background-color 0.2s;
 }
 
 /* 
