--- a/FE/src/style/dustForecast.css
+++ b/FE/src/style/dustForecast.css
@@ -1,8 +1,103 @@
 .dustForecast{
-  width: 100%;
+  width: 414px;
   height: 666px;
-  background-color: steelblue;
+  margin: 0 auto;
 }
+
+.dustForecast > .imageArea {
+  width: 414px;
+  height :370px;
+}
+
+.dustForecast > .imageArea > img{
+  width: 100%;
+  height: 100%;
+}
+
+.dustForecast > .informOverall > p{
+  width: 95%;
+  font-size: 18px;
+  margin: 0 auto;
+}
+
+.dustForecast > .informGrade{
+  margin-top: 15px;
+}
+
+.dustForecast > .informGrade > p{
+  width: 95%;
+  font-size: 16px;
+  margin: 0 auto;
+}
+
+.dustForecast > .controll{
+  width: 100%;
+  height: 100px;
+}
+
+.dustForecast > .controll > .playpause{
+  width: 50px;
+  height: 70px;
+  float: left;
+}
+
+.dustForecast > .controll > .playpause > label{
+    display: block;
+    box-sizing: border-box;
+    width: 0;
+    height: 37px;
+    margin-left: 20px;
+    border-color: transparent transparent transparent #202020;
+    transition: 100ms all ease;
+    cursor: pointer;
+    border-style: double;
+    border-width: 0 0 0 30px;
+}
+
+.dustForecast > .controll > .playpause > label:active{
+  border-color: transparent transparent transparent darkgray;
+}
+
+.dustForecast > .controll > .playpause > :checked + label{
+  border-style: solid;
+  border-width: 18px 0 18px 30px;
+}
+
+.dustForecast > .controll > .playpause > input[type="checkbox"]{
+  visibility: hidden;
+}
+
+.dustForecast > .controll > .scrollBar{
+  width: 334px;
+  height: 70px;
+  padding-left: 30px;
+  display: inline-block;
+  align-items: center;
+}
+
+.dustForecast > .controll > .scrollBar > .bar {
+  width: 300px;
+  height: 3px;
+  background: gray;
+  margin-left: 13px;
+  margin-top: 36px;
+}
+
+.dustForecast > .controll > .scrollBar > button {
+  width: 25px;
+  height: 25px;
+  float: left;
+  margin-top: -15px;
+  border-radius: 25px;
+  margin-left: 0px;
+  background-color: darkgray;
+}
+
+
+.dustForecast > .controll > .scrollBar > button:active {
+  background-color: gray;
+}
+
 
 /* 
   ##Device = Most of the Smartphones Mobiles (Portrait)
