[FEAT] FE-DustCondition-002 CSS 수정
- 미세먼지앱 타이틀 부분 CSS 추가
- 타이틀이 추가되면서 다른 요소들 사이즈 조정

--- a/FE/src/style/dustCondition.css
+++ b/FE/src/style/dustCondition.css
@@ -5,15 +5,18 @@
 .dustCondition > .dustInfo{
   height: 340px;
   text-align: center;
-  background:linear-gradient(to top,white, #6096D8);
+  padding-top: 30px;
+}
+.dustCondition > .dustInfo > .title{
+  font-size: 25px;
+  font-weight: bold;
 }
 .dustCondition > .dustInfo >.gradeEmoji{
-  font-size: 130px;
+  font-size: 120px;
 }
 .dustCondition > .dustInfo >.grade{
   font-size: 25px;
   font-weight: bold;
-  margin: 10px;
 }
 .dustCondition > .dustInfo >.dustValue{
   font-size: 25px;
