[FEAT] FE-DustCondition-002 CSS 수정
- dustConditon에 height 값 추가
- dustGraph height 값 수정 -> 전체적으로 생겼던 스크롤 제거

--- a/FE/src/style/dustCondition.css
+++ b/FE/src/style/dustCondition.css
@@ -1,6 +1,7 @@
 .dustCondition{
-  width: 100%;
+  width: 414px;
   height: 666px;
+  margin: 0 auto;
 }
 .dustCondition > .dustInfo{
   height: 340px;
@@ -34,7 +35,7 @@
   font-weight: bold;
 }
 .dustCondition > .dustGraph {
-  height: 326px;
+  height: 296px;
   overflow: scroll;
 }
 .dustCondition > .dustGraph > ul >li  {
