[FEAT] FE-DustCondition-006 그래프 구현
- 대기질 기록표시 막대그래프 구현
- 미세먼지 등급별 그래프의 색상 다르게 렌더링
- 그래프 height와 border CSS 스타일 수정

--- a/FE/src/style/dustCondition.css
+++ b/FE/src/style/dustCondition.css
@@ -39,16 +39,15 @@
   overflow: scroll;
 }
 .dustCondition > .dustGraph > ul >li  {
-  border: solid 0.1px #F2F2F2;
+  height: 20px;
+  border: solid 0.5px #F2F2F2;
   text-align: right;
-  padding-right: 10px;
-}
-.dustCondition > .dustGraph > ul > li > .graphValue{
-  position: relative;
+  overflow: scroll;
 }
 .dustCondition > .dustGraph > ul > li > .graph{
-  position: absolute;
-}
+  height: 100%;
+  padding-right: 5px;
+  box-sizing: border-box;}
 
 /* 
   ##Device = Most of the Smartphones Mobiles (Portrait)
