[FEAT] Dust Forecast 리팩토링
Title >
* Dust Forecast 리팩토링.

Contents >
* dustForecast.js 에 몰려있는 기능을 의미별로 분류.
* 매직넘버 제거.
* constants js 파일들을 추가.
* navigation 및 dustForecast 에 대한 data 파일들을 추가.

--- a/FE/src/style/dustForecast.css
+++ b/FE/src/style/dustForecast.css
@@ -14,17 +14,17 @@
   height: 100%;
 }
 
-.dustForecast > .informOverall > p{
+.dustForecast > .information > .informOverall > p{
   width: 95%;
   font-size: 18px;
   margin: 0 auto;
 }
 
-.dustForecast > .informGrade{
+.dustForecast > .information >.informGrade{
   margin-top: 15px;
 }
 
-.dustForecast > .informGrade > p{
+.dustForecast > .information >.informGrade > p{
   width: 95%;
   font-size: 16px;
   margin: 0 auto;
